<resources>
    <string name="app_name">Swallow</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_main">Main</string>
    <string name="navigation_card">Cards</string>
    <string name="navigation_map">Map</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="action_about">About</string>
    <string name="title_activity_cards">Discount cards</string>
    <string name="title_activity_map">Map</string>
    <string name="settings_name">Name</string>
    <string name="settings_sound">Sound</string>
    <string name="settings_language">Language</string>
    <string name="settings_save">Save</string>
    <string name="info_about">© Viktorija Varnaitė IFF-7/2</string>
    <string name="card_create">Write your card number</string>
    <string name="card_save">Save</string>
    <string name="card_cancel">Cancel</string>
    <string name="card_save_completed">Saved</string>
    <string name="title_activity_database">Add new card</string>
    <!-- Strings used for fragments for navigation -->

    <string name="cardName">Card Name</string>
    <string name="cardNumber">Card Number</string>
    <string name="cardPhoto">Card Photo</string>
    <string name="scanCode">Scan Code</string>
    <string name="photoUpload">Upload Photo</string>
    <string name="informationUpload">Upload</string>
    <string name="choose_photo">Choose photo</string>
    <string name="uploading">Information is uplaoding to storage!</string>
    <string name="upload_succesfull">Information was uploaded!</string>
    <string name="fill_values">Please fill all the values!</string>
    <string name="title_activity_card_information">CardInformation</string>
    <string name="first_fragment_label">First Fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>

    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string-array name="language">
        <item>English</item>
        <item>Lithuanian</item>
    </string-array>

</resources>
